# documenti_tesi

codice/: procedura_completa
codice/approccio_jtag/: Lettura_scrittura_frame_jtag.tcl  Read_write_frame_jtag.tcl  cose_da_fare
codice/bram/: .mem.mmi.swp  bram.bmm  bram.mmi  bram.tcl  m.mem  mem.mmi  ottenere_posizone_bram_dal_design  script_bram  test.mem  vivado.jou  vivado_11786.backup.jou  vivado_13059.backup.jou  vivado_25749.backup.jou  vivado_8048.backup.jou
codice/bram_esempio/: bram_esempio.xpr
codice/esempio_due_registri/: esempio_un_registro.xpr
codice/esempio_un_registro/: esempio_un_registro.xpr
codice/gestore_checkpoint/: gestore_checkpoint.xpr
codice/icap/: icap.xpr
codice/script_per_i_dati/: bit_registro.rdbk  bitstream_da_inviare.txt  due_registri  found_address_in_ll.tcl  swap_bit_file.tcl  trovare_indirizzi_in_ll.tcl
codice/scrittura_su_flash/: scrittura_su_flash.xpr
documenti_board_codice/: readme
documenti_board_codice/gaffe-xilinx-master/: .Rising.bit.swp  .travis.yml  Cargo.toml  README.md  Rising_ascii.bit  bitstream.bit  bitstream_ascii.bit
documenti_board_codice/gaffe-xilinx-master/src/: from_bytes.rs  lib.rs
documenti_board_codice/gaffe-xilinx-master/src/xc7/: bitstream.rs  configuration.rs  device.rs  frame_address.rs  idcode.rs  mod.rs  registers.rs
icap/: icap.xpr
icap/icap.cache/wt/: gui_handlers.wdf  synthesis.wdf  webtalk_pa.xml
icap/icap.runs/.jobs/: vrs_config_2.xml
icap/icap.runs/icap_template_synth_1/: htr.txt  icap_template.vds  icap_template_utilization_synth.rpt  rundef.js  vivado.jou  vivado.pb
(+1584 files in other folders)
